--- a/package.json
+++ b/package.json
@@ -64,10 +64,19 @@
     "js-data-adapter": "~0.8.2"
   },
   "peerDependencies": {
-    "js-data": "^3.0.0-rc.4"
+    "js-data": "^3.0.2"
   },
   "devDependencies": {
-    "js-data-repo-tools": "1.0.0",
+    "babel-core": "6.21.0",
+    "babel-plugin-external-helpers": "6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "commander": "2.9.0",
+    "js-data-repo-tools": "^1.0.0",
+    "nyc": "^11.7.1",
+    "rollup": "0.41.4",
+    "rollup-plugin-babel": "2.7.1",
     "semistandard": "12.0.1"
   }
 }
